--- a/ngrinder-frontend/src/html/app.html
+++ b/ngrinder-frontend/src/html/app.html
@@ -24,7 +24,8 @@
             role: "{{ currentUser.role.shortName }}",
         },
         config: {
-            clustered: ("{{ clustered }}" === 'true')
+            clustered: ("{{ clustered }}" === 'true'),
+            helpUrl: "{{ helpUrl }}",
         },
     }
 </script>
