Show label when has new announcement

--- a/ngrinder-frontend/src/html/app.html
+++ b/ngrinder-frontend/src/html/app.html
@@ -27,6 +27,7 @@
         config: {
             clustered: ("{{ clustered }}" === 'true'),
             helpUrl: "{{ helpUrl }}",
+            hasNewAnnouncement: ("{{ hasNewAnnouncement }}" === 'true'),
         },
     }
 </script>
