Rename vue mounted target id

--- a/ngrinder-frontend/src/html/app.html
+++ b/ngrinder-frontend/src/html/app.html
@@ -7,7 +7,7 @@
 <link href="/css/ngrinder.css" rel="stylesheet"/>
 <link href="/css/introjs.min.css" rel="stylesheet"/>
 
-<div id="app">
+<div id="ngrinder">
     <div id="ngrinder-main-content-wrapper">
         <navigator v-if="currentUser.role"></navigator>
         <router-view></router-view>
