Use key in router view

--- a/ngrinder-frontend/src/html/app.html
+++ b/ngrinder-frontend/src/html/app.html
@@ -10,7 +10,7 @@
 <div id="ngrinder">
     <div id="ngrinder-main-content-wrapper">
         <navigator v-if="currentUser.role"></navigator>
-        <router-view></router-view>
+        <router-view :key="$route.fullPath"></router-view>
         <copyright :version="version"></copyright>
     </div>
 </div>
