Implement switch user

--- a/ngrinder-frontend/src/html/app.html
+++ b/ngrinder-frontend/src/html/app.html
@@ -34,6 +34,7 @@
         config: {
             visibleRegions: visibleRegions.substr(1, visibleRegions.length -2).split(','),
             clustered: ("{{ clustered }}" === 'true'),
+            userSwitchMode: !!("{{ currentUser.ownerUser }}"),
             helpUrl: "{{ helpUrl }}",
             hasNewAnnouncement: ("{{ hasNewAnnouncement }}" === 'true'),
         },
